# apricorn-usb-tool

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  DRIVER_FIELDS_PROPOSAL.md  INSTALLERS.md  INSTRUCTIONS.md  README.md  REFACTOR_PLAN.md  VERSIONING_REFACTOR_LOG.md  performance_analysis.md  pyproject.toml  pytest.ini  requirements.txt  session_log.txt  setup.py  update_sudoersd_macos.sh
.github/workflows/: build.yml  ci.yaml  release.yaml
benchmarks/: profile_scan_baselines.json
examples/: autolock_windows.py  poll_usb.py  poll_usb_mac.py  test_usb.py
installers/linux/: README.md  install.sh  uninstall.sh
installers/linux/debian/DEBIAN/: config  control  postinst  postrm  prerm  templates
installers/macos/: README.md  install.sh  uninstall.sh
installers/macos/nopasswd/scripts/: postinstall
installers/macos/scripts/: postinstall
installers/windows/: README.md  usb-tool.nsi  usb-tool.wxs
scripts/: project_version.py  sync_cached_version.py  windows_native_scan.c
scripts/windows_native_scan/: common.h  devnode.c  enumerate.c  enumerate.h  storage.c  storage.h  topology.h
src/usb_tool/: __init__.py  _version.py  cli.py  constants.py  device_config.py  device_version.py  help_text.py  models.py  services.py  utils.py
src/usb_tool/backend/: base.py  linux.py  macos.py  windows.py
tests/: collect_linux_data.py  collect_macOS_data.py  collect_windows_data.py  test_cli_pause.py  test_cross_usb.py  test_glibc_floor.py  test_help_text.py  test_linux_usb.py  test_mac_usb.py  test_package_imports.py  test_utils.py  test_version_cache.py  test_version_visibility.py  test_windows_usb.py
tests/mock_data/: mock_data_collection_instructions.md
tests/mock_data/windows/scenario_multiple_devices/: controllers.json  readonly_status.json
tests/mock_data/windows/scenario_oob_device/: controllers.json
tests/mock_data/windows/scenario_single_device/: controllers.json  readonly_status.json
usb_tool/: __init__.py  _version.py  build_linux.sh  common.py  create_class_object.py  cross_usb.py  device_config.py  device_version.py  filter_wmi_devices.py  libusb_serialNumber.py  linux_usb.py  mac_usb.py  poke_device.py  poke_test.py  runtime_check.py  update.py  usb.spec.linux  usb.spec.windows  utils.py  windows_usb.py  windows_usb_new.py  windows_usb_new_new.py
utils/: project_version.py  windows_native_compile_hook.py  windows_native_scan.c
utils/windows_native_scan/: common.c  devnode.c  devnode.h  enumerate.c  json_emit.c  json_emit.h  main.c  storage.c  storage.h  topology.c  version_probe.c  version_probe.h
wheels/: usb_tool-0.1.7-py3-none-any.whl
windows-usb/: __init__.py
windows_usb/: __init__.py  windows_usb.py
windows_usb/utils/: USBDeview.cfg
