# --- pyproject.toml ---

"""
Configuration for building and packaging ``usb-tool``.

All packaging metadata lives in this single file so the project no longer
relies on ``setup.py`` or ``requirements.txt``.
"""

[build-system]
# Setuptools is used to build the package
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Package metadata
name = "usb-tool"
version = "0.2.0"
description = "Cross-platform USB tool for Apricorn devices"
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies.  Windows specific packages use environment markers so
# they are only installed on that platform.
dependencies = [
    "pywin32==309; sys_platform == 'win32'",
    "libusb==1.0.27.post4; sys_platform == 'win32'",
    "pygments==2.19.1; sys_platform == 'win32'",
]

# Optional: Author, license, URL, etc. (Good practice for sharing)
# authors = [
#    { name="Your Name", email="your.email@example.com" },
# ]
# license = { text="MIT" }
# urls = { Homepage = "https://github.com/yourusername/usb-tool" }

# --- This section defines the command-line script ---
[project.scripts]
usb = "usb_tool.cross_usb:main"
usb-update = "usb_tool.update:main"

# --- End of pyproject.toml ---
