# --- pyproject.toml ---

# Configuration for building and packaging ``apricorn-usb-tool``.
#
# All packaging metadata lives in this single file so the project no longer
# relies on ``setup.py`` or ``requirements.txt``.

[build-system]
# Setuptools is used to build the package
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Package metadata
name = "apricorn-usb-tool"
version = "1.2.0"
description = "Cross-platform USB tool for Apricorn devices"
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies.  Windows specific packages use environment markers so
# they are only installed on that platform.
dependencies = [
    "pyusb",
    "libusb; sys_platform == 'win32'",
    "pywin32==309; sys_platform == 'win32'",
    "pygments==2.19.1; sys_platform == 'win32'",
]

# author = [
#    { name="Ryan Oswalt", email="roswalt@apricorn.com" },
# ]
# license = { text="MIT" }
# urls = { Homepage = "https://github.com/oswaltryan/apricorn-usb-tool" }

# --- This section defines the command-line script ---
[project.scripts]
usb = "usb_tool.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "ruff",
    "pytest"
]

# Explicitly specify which packages are included to avoid picking up the
# ``wheels`` directory used for vendored dependencies.
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["usb_tool"]

[tool.setuptools.package-data]
usb_tool = ["_cached_version.txt"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
    "wheels/",
]

# --- End of pyproject.toml ---
